- `seedwatch`: do not include unplantable tree seeds in its status report
- ``Buildings::containsTile``: fix result for buildings that are solid and have no extent structures
- Mortal mode: prevent keybindings that run armok tools from being recognized when in mortal mode
- `dig`: don't leave phantom dig designations behind when autodigging warm/damp designated tiles

## Misc Improvements
- `blueprint`: capture track carving designations in addition to already-carved tracks
- `changevein`: affect connected veins even outside of the selected map block
- `logistics`: new ability to automatically forbid or claim items brought to a stockpile (or a dump within a stockpile)
- `regrass`: now accepts numerical IDs for grass raws; ``regrass --list`` replaces ``regrass --plant ""``
- `tiletypes`: performance improvements when affecting tiles over a large range
- `tiletypes`: support for heavy aquifers
- `tiletypes`: new ``surroundings`` property for maintaining valid tile surroundings
- Dreamfort: add a full complement of beds and chests to both barracks
- Dreamfort: redesign guildhall/temple/library level for better accessibility
- Dreamfort: walkthough documentation refresh
- Dreamfort: add milking/shearing station in surface grazing pasture
- Dreamfort: integrate building prioritization into the blueprints and remove `prioritize` checklist steps
- Dreamfort: add plumbing template for filling cisterns with running water
- `buildingplan`: add option to ignore items from a specified burrow
- `autobutcher`: do not butcher pregnant (or brooding) females
- `quickfort`: support buildable instruments
- `nestboxes`: increase the scanning frequency for fertile eggs to reduce the chance that they get snarfed by eager dwarves
- `autonestbox`: wait until juveniles become adults before they are assigned to nestboxes
- `suspendmanager`: add option to ``unsuspend`` that unsuspends all jobs, regardless of potential issues

## Documentation